--- a/public/watch.html
+++ b/public/watch.html
@@ -3,7 +3,6 @@
 <head>
   <script>
     (function () {
-      // allow fotbal.site too
       var ok = ['kixonair.com', 'www.kixonair.com', 'fotbal.site', 'www.fotbal.site', '', 'localhost', '127.0.0.1'];
       try {
         if (!ok.includes(location.hostname)) location.replace('https://kixonair.com');
@@ -36,210 +35,37 @@
       line-height: 1.5;
     }
     a{ color: inherit; }
-    .wrap{
-      max-width:980px;
-      margin:0 auto;
-      padding:var(--pad);
-    }
-    .headerbar{
-      display:grid;
-      grid-template-columns:auto 1fr auto;
-      align-items:center;
-      margin-bottom:16px;
-      color: var(--text-col);
-    }
+    .wrap{ max-width:980px; margin:0 auto; padding:var(--pad); }
+    .headerbar{ display:grid; grid-template-columns:auto 1fr auto; align-items:center; margin-bottom:16px; color: var(--text-col); }
     .headerbar .center{justify-self:center;}
-    .badge{
-      display:inline-block;
-      border:1px solid var(--border-col);
-      background: var(--secondary-bg);
-      color: var(--text-col);
-      border-radius:999px;
-      padding:4px 12px;
-      font-size:12px;
-      max-width:50vw;
-      white-space:nowrap;
-      overflow:hidden;
-      text-overflow:ellipsis;
-    }
-    .teams{
-      display:grid;
-      grid-template-columns:1fr auto 1fr;
-      gap:18px;
-      align-items:center;
-      justify-items:center;
-      margin:20px 0 8px;
-      background: var(--secondary-bg);
-      border:1px solid var(--border-col);
-      border-radius:16px;
-      padding:16px;
-      box-shadow:0 4px 8px rgba(0,0,0,0.3);
-    }
-    .side{
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      gap:10px;
-      text-align:center;
-    }
-    .side img{
-      width:clamp(64px,14vw,96px);
-      height:clamp(64px,14vw,96px);
-      object-fit:contain;
-      filter: drop-shadow(0 2px 4px rgba(0,0,0,0.4));
-    }
-    .teamName{
-      font-size:clamp(18px,4.5vw,24px);
-      font-weight:600;
-      line-height:1.3;
-      color: var(--text-col);
-      white-space: normal;
-      overflow-wrap: anywhere;
-      max-width:100%;
-    }
-    .h1{
-      font-size:clamp(28px,8vw,42px);
-      font-weight:800;
-      text-align:center;
-      letter-spacing:.08em;
-      color: var(--accent);
-    }
-    .muted{
-      color: var(--muted-col);
-    }
-    .statusBig{
-      margin-top:8px;
-      margin-bottom:6px;
-      text-align:center;
-      font-size:18px;
-      font-weight:500;
-      color: var (--accent);
-    }
-    .meta{
-      display:grid;
-      grid-template-columns:repeat(3,minmax(0,1fr));
-      gap:12px;
-      margin:20px 0;
-      background: var(--secondary-bg);
-      border:1px solid var(--border-col);
-      border-radius:16px;
-      padding:16px;
-      box-shadow:0 4px 8px rgba(0,0,0,0.3);
-    }
+    .badge{ display:inline-block; border:1px solid var(--border-col); background: var(--secondary-bg); color: var(--text-col); border-radius:999px; padding:4px 12px; font-size:12px; max-width:50vw; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
+    .teams{ display:grid; grid-template-columns:1fr auto 1fr; gap:18px; align-items:center; justify-items:center; margin:20px 0 8px; background: var(--secondary-bg); border:1px solid var(--border-col); border-radius:16px; padding:16px; box-shadow:0 4px 8px rgba(0,0,0,0.3); }
+    .side{ display:flex; flex-direction:column; align-items:center; gap:10px; text-align:center; }
+    .side img{ width:clamp(64px,14vw,96px); height:clamp(64px,14vw,96px); object-fit:contain; filter: drop-shadow(0 2px 4px rgba(0,0,0,0.4)); }
+    .teamName{ font-size:clamp(18px,4.5vw,24px); font-weight:600; line-height:1.3; color: var(--text-col); }
+    .h1{ font-size:clamp(28px,8vw,42px); font-weight:800; text-align:center; letter-spacing:.08em; color: var(--accent); }
+    .muted{ color: var(--muted-col); }
+    .statusBig{ margin-top:8px; margin-bottom:6px; text-align:center; font-size:18px; font-weight:500; color: var(--accent); }
+    .meta{ display:grid; grid-template-columns:repeat(3,minmax(0,1fr)); gap:12px; margin:20px 0; background: var(--secondary-bg); border:1px solid var(--border-col); border-radius:16px; padding:16px; }
     @media(max-width:720px){ .meta{grid-template-columns:repeat(2,minmax(0,1fr));} }
-    .serverbar{
-      display:flex;
-      flex-wrap:wrap;
-      gap:14px;
-      justify-content:center;
-      margin:18px 0 4px;
-      background: var(--secondary-bg);
-      border:1px solid var(--border-col);
-      border-radius:16px;
-      padding:16px;
-      box-shadow:0 4px 8px rgba(0,0,0,0.3);
-    }
-    .serverbar .sbtn{
-      display:inline-flex;
-      align-items:center;
-      justify-content:center;
-      min-width:120px;
-      border-radius:12px;
-      padding:12px 18px;
-      text-decoration:none;
-      color:var(--text-col);
-      background: linear-gradient(135deg, var(--accent) 0%, var(--accent-hover) 100%);
-      transition: background 0.3s ease, transform 0.1s ease;
-      font-weight:500;
-    }
-    .serverbar .sbtn:hover{
-      background: linear-gradient(135deg, var(--accent-hover) 0%, var(--accent) 100%);
-      transform: translateY(-2px);
-    }
-    .loading{
-      position:fixed;
-      inset:0;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      justify-content:center;
-      background:rgba(5,12,23,0.8);
-      backdrop-filter:saturate(120%) blur(4px);
-      z-index:50;
-      transition:opacity .25s ease;
-    }
-    .loading.hidden{ opacity:0; pointer-events:none; }
-    .spinner{
-      position:relative;
-      width:74px;
-      height:74px;
-      margin-bottom:10px;
-    }
-    .ring{
-      position:absolute;
-      inset:0;
-      border-radius:50%;
-      border:4px solid rgba(255,255,255,.1);
-      border-top-color: var(--accent);
-      animation:spin 1s linear infinite;
-    }
-    .dot{
-      position:absolute;
-      top:50%; left:50%;
-      width:16px; height:16px;
-      background: var(--success-col);
-      border-radius:50%;
-      transform:translate(-50%,-50%);
-      animation:pulse 1.4s ease-in-out infinite;
-    }
-    .loadingText{
-      font-size:14px;
-      color: var(--muted-col);
-      letter-spacing:.02em;
-    }
+    .serverbar{ display:flex; flex-wrap:wrap; gap:14px; justify-content:center; margin:18px 0 4px; background: var(--secondary-bg); border:1px solid var(--border-col); border-radius:16px; padding:16px; }
+    .serverbar .sbtn{ display:inline-flex; align-items:center; justify-content:center; min-width:120px; border-radius:12px; padding:12px 18px; text-decoration:none; color:var(--text-col); background: linear-gradient(135deg, var(--accent) 0%, var(--accent-hover) 100%); transition: background 0.3s ease, transform 0.1s ease; font-weight:500; }
+    .serverbar .sbtn:hover{ background: linear-gradient(135deg, var(--accent-hover) 0%, var(--accent) 100%); transform: translateY(-2px); }
+    .loading{ position:fixed; inset:0; display:flex; flex-direction:column; align-items:center; justify-content:center; background:rgba(5,12,23,0.8); z-index:50; }
+    .loading.hidden{ display:none; }
+    .spinner{ width:74px; height:74px; border:4px solid rgba(255,255,255,.1); border-top-color: var(--accent); border-radius:50%; animation:spin 1s linear infinite; margin-bottom:10px; }
     @keyframes spin{ to{ transform:rotate(360deg) } }
-    @keyframes pulse{ 0%,100%{ transform:translate(-50%,-50%) scale(.85); opacity:.85 } 50%{ transform:translate(-50%,-50%) scale(1.1); opacity:1 } }
-    @media(max-width:600px){ #leagueBadge{ display:none; } }
-    .btn{
-      display:inline-block;
-      padding:8px 14px;
-      border:1px solid var(--accent);
-      background: transparent;
-      color: var(--accent);
-      border-radius:8px;
-      text-decoration:none;
-      font-weight:500;
-      transition: background 0.25s ease, color 0.25s ease;
-    }
-    .btn:hover{
-      background: var(--accent);
-      color:#ffffff;
-    }
-    header.header{
-      background: var(--secondary-bg);
-      border-bottom:1px solid var(--border-col);
-    }
-    header .bar{
-      max-width:980px;
-      margin:0 auto;
-      padding: var(--pad);
-      display:flex;
-      align-items:center;
-    }
   </style>
 </head>
 <body>
 <header class="header">
-  <div class="bar">
-    <a class="btn" href="/" aria-label="Back to schedule">← Back</a>
-    <div style="flex:1"></div>
-  </div>
+  <div class="wrap" style="display:flex;align-items:center;gap:10px;"><a class="badge" href="/">← Back</a></div>
 </header>
 
 <main class="wrap">
-  <div id="loadingOverlay" class="loading" aria-live="polite" aria-busy="true">
-    <div class="spinner"><div class="ring"></div><div class="dot"></div></div>
-    <div class="loadingText">Loading match…</div>
+  <div id="loadingOverlay" class="loading">
+    <div class="spinner"></div>
+    <div class="muted">Loading match…</div>
   </div>
 
   <div class="headerbar">
@@ -265,170 +91,137 @@
 </main>
 
 <script>
-  // ===== CONFIG =====
-  const API_KEY = 'kix-7d29f2d9ef3c4';
-  const API_BASE = './api';
-
-  // ===== helpers =====
-  let __loadFailTimer = null;
+  // helpers
   const $ = id => document.getElementById(id);
-  function hideLoading(){ try{ $('loadingOverlay').classList.add('hidden'); }catch{} if(__loadFailTimer){clearTimeout(__loadFailTimer);__loadFailTimer=null;} }
+  function hideLoading(){ $('#loadingOverlay').classList.add('hidden'); }
   function qs(name){ return new URLSearchParams(location.search).get(name) || ''; }
-  function getMatchId(){ return qs('id') || qs('m') || ''; } // accepts ?id= or ?m=
+  function getMatchId(){ return qs('id') || qs('m') || ''; }
   function slug(s){ return String(s||'').toLowerCase().replace(/[^a-z0-9]+/g,'-').replace(/(^-|-$)/g,''); }
   function capWords(s){ return String(s||'').split(/[-\s]+/).map(w => w? w[0].toUpperCase()+w.slice(1):'').join(' '); }
-  function addDays(dateStr, delta){
-    const dt = new Date(Date.UTC(+dateStr.slice(0,4), +dateStr.slice(5,7)-1, +dateStr.slice(8,10)));
-    dt.setUTCDate(dt.getUTCDate()+delta);
-    return dt.toISOString().slice(0,10);
+  function yyyymmddFromISO(iso){
+    // iso: 2025-11-09
+    const d = iso.replace(/-/g,'');
+    return d;
+  }
+  function addDaysISO(iso, n){
+    const d = new Date(iso);
+    d.setDate(d.getDate()+n);
+    const y = d.getFullYear();
+    const m = String(d.getMonth()+1).padStart(2,'0');
+    const da = String(d.getDate()).padStart(2,'0');
+    return `${y}-${m}-${da}`;
   }
   function formatStatus(status){
     const raw = String(status || '').toUpperCase();
-    const livePatterns = ['IN_PLAY','LIVE','PLAYING','1ST HALF','FIRST HALF','2ND HALF','SECOND HALF'];
-    for (const p of livePatterns){ if (raw.includes(p)) return 'Live'; }
-    const halfPatterns = ['HALF-TIME','HALFTIME','HT','HALF TIME','PAUSED'];
-    for (const p of halfPatterns){ if (raw.includes(p)) return 'Half Time'; }
-    const finPatterns = ['FINISHED','FULL-TIME','FT','FINAL','ENDED'];
-    for (const p of finPatterns){ if (raw.includes(p)) return 'Finished'; }
-    const schedPatterns = ['SCHEDULED','NOT_STARTED','NS'];
-    for (const p of schedPatterns){ if (raw.includes(p)) return 'Scheduled'; }
+    if (raw.includes('LIVE') || raw.includes('IN_PLAY')) return 'Live';
+    if (raw.includes('FINISH') || raw.includes('FT')) return 'Finished';
+    if (raw.includes('SCHED') || raw.includes('NOT')) return 'Scheduled';
     return status || '';
   }
-
   function renderServerButtonsFromSlug(sl){
-    const bar = $('serverBar'); if (!bar) return;
+    const bar = $('#serverBar');
     const labels = ['Server 1','Server 2','Server 3','Server 4','Server 5'];
     const url = 'https://crutchanalyse.com/w2n5uxyv5?key=421e53b34da32e5044e25f26baddab45';
     bar.innerHTML = labels.map(l => `<a class="sbtn" href="${url}" target="_blank" rel="noopener">${l}</a>`).join('');
   }
-  function renderServerButtonsFromFixture(fx){
-    const home = fx?.home?.name || ''; const away = fx?.away?.name || '';
-    const sl = slug(home + '-vs-' + away);
-    renderServerButtonsFromSlug(sl);
-  }
 
-  // prefill from URL
+  // prefill
   (function prime(){
     const id = getMatchId();
     if (id){
-      const pure = id.includes('@') ? id.split('@')[0] : id;
-      const toks = pure.split('-vs-');
-      if (toks.length === 2){
-        $('homeName').textContent = capWords(toks[0]);
-        $('awayName').textContent = capWords(toks[1]);
+      const base = id.includes('@') ? id.split('@')[0] : id;
+      const parts = base.split('-vs-');
+      if (parts.length === 2){
+        $('#homeName').textContent = capWords(parts[0]);
+        $('#awayName').textContent = capWords(parts[1]);
       } else {
-        $('homeName').textContent = capWords(pure);
+        $('#homeName').textContent = capWords(base);
       }
-      renderServerButtonsFromSlug(pure);
-      $('statusLine').textContent = 'Loading…';
+      renderServerButtonsFromSlug(base);
     }
   })();
 
-  async function fixturesFor(dateStr){
-    const url = `https://fotbal.site/fixtures.php?date=${encodeURIComponent(dateStr)}`;
-    let r;
-    try {
-      r = await fetch(url, { cache: 'no-store' });
-    } catch (e) {
+  // fetch fixtures from fotbal.site with yyyymmdd
+  async function fixturesFor(isoDate){
+    // isoDate: 2025-11-09 -> need 20251109
+    const yyyymmdd = yyyymmddFromISO(isoDate);
+    const url = `https://fotbal.site/fixtures.php?date=${yyyymmdd}`;
+    try{
+      const r = await fetch(url, {cache:'no-store'});
+      if (!r.ok) return [];
+      const data = await r.json();
+      if (!Array.isArray(data)) return [];
+      // normalize
+      return data.map(x => {
+        const homeName = x.home_team || x.home_name || x.home || '';
+        const awayName = x.away_team || x.away_name || x.away || '';
+        const leagueName = x.league_name || x.league || x.competition || '';
+        const startUtc = x.kickoff || x.time || x.date || '';
+        const status = x.status || x.state || '';
+        const homeLogo = x.home_logo || x.home_badge || '';
+        const awayLogo = x.away_logo || x.away_badge || '';
+        return {
+          raw: x,
+          home: { name: homeName, logo: homeLogo },
+          away: { name: awayName, logo: awayLogo },
+          league: { name: leagueName },
+          start_utc: startUtc,
+          status: status
+        };
+      });
+    }catch(e){
       return [];
     }
-    if (!r || !r.ok) return [];
-    let list;
-    try {
-      list = await r.json();
-    } catch (e) {
-      return [];
-    }
-    if (!Array.isArray(list)) return [];
-    return list.map(x => {
-      const homeName = (x.home && x.home.name) || x.home_name || x.home || x.team_home || x.localteam || '';
-      const awayName = (x.away && x.away.name) || x.away_name || x.away || x.team_away || x.visitorteam || '';
-      const leagueName = (x.league && x.league.name) || x.league || x.competition || x.tournament || '';
-      const startUtc = x.start_utc || x.kickoff || x.date || x.time || '';
-      const status = x.status || x.state || x.match_status || '';
-      const homeLogo = (x.home && x.home.logo) || x.home_logo || '';
-      const awayLogo = (x.away && x.away.logo) || x.away_logo || '';
-      return {
-        ...x,
-        home: { name: homeName, logo: homeLogo },
-        away: { name: awayName, logo: awayLogo },
-        league: { name: leagueName },
-        start_utc: startUtc,
-        status: status
-      };
-    });
   }
 
-  function tokens(name){
-    const s = slug(name); const parts = s.split('-').filter(Boolean);
-    return { full:s, first:parts[0] || s, last:parts[parts.length-1] || s };
-  }
   function matchSlug(slugPart, fx){
-    const nmHome = tokens(fx.home?.name || '');
-    const nmAway = tokens(fx.away?.name || '');
-    const pairA = slug(nmHome.full + '-vs-' + nmAway.full);
-    const pairB = slug(nmAway.full + '-vs-' + nmHome.full);
-    if (slugPart === pairA || slugPart === pairB) return true;
-    const toks = slugPart.split('-vs-');
-    if (toks.length === 2){
-      const a=toks[0], b=toks[1];
-      const hitAB = nmHome.full.includes(a) && nmAway.full.includes(b);
-      const hitBA = nmHome.full.includes(b) && nmAway.full.includes(a);
-      return hitAB || hitBA;
-    }
-    return false;
+    const a = slug(fx.home?.name || '');
+    const b = slug(fx.away?.name || '');
+    const full1 = `${a}-vs-${b}`;
+    const full2 = `${b}-vs-${a}`;
+    return slugPart === full1 || slugPart === full2;
   }
 
   function applyFixture(fx){
-    const homeName = fx.home?.name || $('homeName').textContent || 'Home';
-    const awayName = fx.away?.name || $('awayName').textContent || 'Away';
-    const homeLogo = fx.home?.logo || '';
-    const awayLogo = fx.away?.logo || '';
-    const league   = fx.league?.name || '';
-    const statusRaw = fx.status || '';
-    const kickoff  = fx.start_utc || '';
-
-    $('homeName').textContent = homeName;
-    $('awayName').textContent = awayName;
-    if (homeLogo) $('homeLogo').src = homeLogo;
-    if (awayLogo) $('awayLogo').src = awayLogo;
-    $('leagueBadge').textContent = league || '';
-    $('league').textContent = league || '-';
-    const friendlyStatus = formatStatus(statusRaw);
-    $('state').textContent = friendlyStatus || '-';
-    $('statusLine').textContent = friendlyStatus || '';
-    $('kickoff').textContent = kickoff ? new Date(kickoff).toLocaleString() : '-';
-
-    renderServerButtonsFromFixture(fx);
+    if (!fx){ hideLoading(); return; }
+    $('#homeName').textContent = fx.home?.name || $('#homeName').textContent;
+    $('#awayName').textContent = fx.away?.name || $('#awayName').textContent;
+    if (fx.home?.logo) $('#homeLogo').src = fx.home.logo;
+    if (fx.away?.logo) $('#awayLogo').src = fx.away.logo;
+    $('#league').textContent = fx.league?.name || '-';
+    $('#leagueBadge').textContent = fx.league?.name || '';
+    const pretty = fx.start_utc ? fx.start_utc : '-';
+    $('#kickoff').textContent = pretty;
+    const friendly = formatStatus(fx.status);
+    $('#state').textContent = friendly || '-';
+    $('#statusLine').textContent = friendly || '';
   }
 
   async function load(){
-    $('loadingOverlay').classList.remove('hidden');
-    __loadFailTimer = setTimeout(hideLoading, 3500);
+    const id = getMatchId();
+    if (!id){ $('#statusLine').textContent = 'Missing match id'; hideLoading(); return; }
 
-    const id  = getMatchId();
-    if (!id){ $('statusLine').textContent='Missing match id'; hideLoading(); return; }
-
-    // try fixtures list only (because fotbal.site doesn't have /fixture/)
     const hasAt = id.includes('@');
     const slugPart = slug(hasAt ? id.split('@')[0] : id);
-    const isoHint  = hasAt ? id.split('@')[1] : null;
-    const base = (isoHint || new Date().toISOString()).slice(0,10);
-    const days = [ -2,-1,0,1,2 ].map(n => addDays(base, n));
+    const isoBase = hasAt
+      ? id.split('@')[1].replace(/(\d{4})(\d{2})(\d{2})/, '$1-$2-$3')
+      : new Date().toISOString().slice(0,10);
+
+    // try date -2 to +2
+    const offsets = [-2,-1,0,1,2];
     let found = null;
-    for (const d of days){
+    for (const off of offsets){
+      const d = addDaysISO(isoBase, off);
       const list = await fixturesFor(d);
       const hit = list.find(fx => matchSlug(slugPart, fx));
       if (hit){ found = hit; break; }
     }
     if (found){
       applyFixture(found);
-    } else {
-      // no match in fotbal.site -> keep names from slug, but don't show error
-      $('statusLine').textContent = ' ';
     }
     hideLoading();
   }
   load();
-</script></body>
+</script>
+</body>
 </html>
