--- a/public/watch.html
+++ b/public/watch.html
@@ -25,7 +25,6 @@
       --accent-hover: #7c3aed;
       --text-col: #f1f5f9;
       --muted-col: #94a3b8;
-      --success-col: #10b981;
     }
     html, body{
       margin:0; padding:0;
@@ -36,191 +35,143 @@
     }
     a{ color: inherit; }
     .wrap{ max-width:980px; margin:0 auto; padding:var(--pad); }
-    .headerbar{ display:grid; grid-template-columns:auto 1fr auto; align-items:center; margin-bottom:16px; color: var(--text-col); }
-    .headerbar .center{justify-self:center;}
-    .badge{ display:inline-block; border:1px solid var(--border-col); background: var(--secondary-bg); color: var(--text-col); border-radius:999px; padding:4px 12px; font-size:12px; max-width:50vw; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
-    .teams{ display:grid; grid-template-columns:1fr auto 1fr; gap:18px; align-items:center; justify-items:center; margin:20px 0 8px; background: var(--secondary-bg); border:1px solid var(--border-col); border-radius:16px; padding:16px; box-shadow:0 4px 8px rgba(0,0,0,0.3); }
-    .side{ display:flex; flex-direction:column; align-items:center; gap:10px; text-align:center; }
-    .side img{ width:clamp(64px,14vw,96px); height:clamp(64px,14vw,96px); object-fit:contain; filter: drop-shadow(0 2px 4px rgba(0,0,0,0.4)); }
-    .teamName{ font-size:clamp(18px,4.5vw,24px); font-weight:600; line-height:1.3; color: var(--text-col); }
-    .h1{ font-size:clamp(28px,8vw,42px); font-weight:800; text-align:center; letter-spacing:.08em; color: var(--accent); }
-    .muted{ color: var(--muted-col); }
-    .statusBig{ margin-top:8px; margin-bottom:6px; text-align:center; font-size:18px; font-weight:500; color: var(--accent); }
-    .meta{ display:grid; grid-template-columns:repeat(3,minmax(0,1fr)); gap:12px; margin:20px 0; background: var(--secondary-bg); border:1px solid var(--border-col); border-radius:16px; padding:16px; }
-    @media(max-width:720px){ .meta{grid-template-columns:repeat(2,minmax(0,1fr));} }
-    .serverbar{ display:flex; flex-wrap:wrap; gap:14px; justify-content:center; margin:18px 0 4px; background: var(--secondary-bg); border:1px solid var(--border-col); border-radius:16px; padding:16px; }
-    .serverbar .sbtn{ display:inline-flex; align-items:center; justify-content:center; min-width:120px; border-radius:12px; padding:12px 18px; text-decoration:none; color:var(--text-col); background: linear-gradient(135deg, var(--accent) 0%, var(--accent-hover) 100%); transition: background 0.3s ease, transform 0.1s ease; font-weight:500; }
-    .serverbar .sbtn:hover{ background: linear-gradient(135deg, var(--accent-hover) 0%, var(--accent) 100%); transform: translateY(-2px); }
-    .loading{ position:fixed; inset:0; display:flex; flex-direction:column; align-items:center; justify-content:center; background:rgba(5,12,23,0.8); z-index:50; }
-    .loading.hidden{ display:none; }
-    .spinner{ width:74px; height:74px; border:4px solid rgba(255,255,255,.1); border-top-color: var(--accent); border-radius:50%; animation:spin 1s linear infinite; margin-bottom:10px; }
-    @keyframes spin{ to{ transform:rotate(360deg) } }
+    .badge{ display:inline-block; border:1px solid var(--border-col); border-radius:999px; padding:4px 12px; background:rgba(15,23,42,0.4); }
+    .teams{ display:grid; grid-template-columns:1fr auto 1fr; gap:18px; align-items:center; justify-items:center; background:rgba(15,23,42,0.4); border:1px solid rgba(148,163,184,0.15); border-radius:16px; padding:16px; margin:20px 0 8px; }
+    .side{ display:flex; flex-direction:column; align-items:center; gap:10px; }
+    .side img{ width:74px; height:74px; object-fit:contain; }
+    .teamName{ font-size:20px; font-weight:600; }
+    .h1{ font-size:32px; font-weight:800; color:var(--accent); }
+    .meta{ display:grid; grid-template-columns:repeat(3,minmax(0,1fr)); gap:12px; margin:16px 0; background:rgba(15,23,42,0.35); border:1px solid rgba(148,163,184,0.12); border-radius:16px; padding:14px; }
+    .meta .muted{ font-size:11px; text-transform:uppercase; }
+    .serverbar{ display:flex; gap:14px; flex-wrap:wrap; background:rgba(15,23,42,0.35); border:1px solid rgba(148,163,184,0.12); border-radius:16px; padding:14px; justify-content:center; }
+    .serverbar .sbtn{ background:linear-gradient(135deg,#6366f1,#7c3aed); border:none; border-radius:999px; padding:10px 18px; color:#fff; cursor:pointer; text-decoration:none; }
+    #loadingOverlay{ position:fixed; inset:0; background:rgba(0,0,0,.75); display:flex; flex-direction:column; gap:6px; align-items:center; justify-content:center; z-index:50; }
+    #loadingOverlay.hidden{ display:none; }
   </style>
 </head>
 <body>
-<header class="header">
-  <div class="wrap" style="display:flex;align-items:center;gap:10px;"><a class="badge" href="/">← Back</a></div>
+<header class="wrap">
+  <a class="badge" href="/">← Back</a>
 </header>
 
 <main class="wrap">
-  <div id="loadingOverlay" class="loading">
-    <div class="spinner"></div>
+  <div id="loadingOverlay">
+    <div style="width:46px;height:46px;border:4px solid rgba(255,255,255,.1);border-top-color:white;border-radius:50%;animation:spin 1s linear infinite"></div>
     <div class="muted">Loading match…</div>
   </div>
-
-  <div class="headerbar">
-    <div></div>
-    <div class="center"></div>
-    <span id="leagueBadge" class="badge"></span>
-  </div>
-
   <div class="teams">
-    <div class="side home"><img id="homeLogo" alt="" width="64" height="64" loading="lazy"/><span class="teamName" id="homeName"></span></div>
-    <div class="h1" id="versus">VS</div>
-    <div class="side away"><img id="awayLogo" alt="" width="64" height="64" loading="lazy"/><span class="teamName" id="awayName"></span></div>
+    <div class="side">
+      <img id="homeLogo" src="/logo.svg" alt="">
+      <div id="homeName" class="teamName">Home</div>
+    </div>
+    <div class="h1">VS</div>
+    <div class="side">
+      <img id="awayLogo" src="/logo.svg" alt="">
+      <div id="awayName" class="teamName">Away</div>
+    </div>
   </div>
-  <div class="muted statusBig" id="statusLine" style="text-align:center"></div>
-
+  <p id="statusLine" class="muted" style="text-align:center;">Loading…</p>
   <div class="meta">
-    <div><span class="muted small">Kickoff</span><div id="kickoff">-</div></div>
-    <div><span class="muted small">Competition</span><div id="league">-</div></div>
-    <div><span class="muted small">Status</span><div id="state">-</div></div>
+    <div><div class="muted">Kickoff</div><div id="kickoff">-</div></div>
+    <div><div class="muted">Competition</div><div id="league">-</div></div>
+    <div><div class="muted">Status</div><div id="state">-</div></div>
   </div>
-
   <div id="serverBar" class="serverbar"></div>
 </main>
 
 <script>
-  // helpers
   const $ = id => document.getElementById(id);
   function hideLoading(){ $('#loadingOverlay').classList.add('hidden'); }
-  function qs(name){ return new URLSearchParams(location.search).get(name) || ''; }
+  function qs(n){ return new URLSearchParams(location.search).get(n) || ''; }
   function getMatchId(){ return qs('id') || qs('m') || ''; }
   function slug(s){ return String(s||'').toLowerCase().replace(/[^a-z0-9]+/g,'-').replace(/(^-|-$)/g,''); }
-  function capWords(s){ return String(s||'').split(/[-\s]+/).map(w => w? w[0].toUpperCase()+w.slice(1):'').join(' '); }
-  function yyyymmddFromISO(iso){
-    // iso: 2025-11-09
-    const d = iso.replace(/-/g,'');
-    return d;
-  }
-  function addDaysISO(iso, n){
-    const d = new Date(iso);
-    d.setDate(d.getDate()+n);
-    const y = d.getFullYear();
-    const m = String(d.getMonth()+1).padStart(2,'0');
-    const da = String(d.getDate()).padStart(2,'0');
-    return `${y}-${m}-${da}`;
-  }
-  function formatStatus(status){
-    const raw = String(status || '').toUpperCase();
-    if (raw.includes('LIVE') || raw.includes('IN_PLAY')) return 'Live';
-    if (raw.includes('FINISH') || raw.includes('FT')) return 'Finished';
-    if (raw.includes('SCHED') || raw.includes('NOT')) return 'Scheduled';
-    return status || '';
-  }
-  function renderServerButtonsFromSlug(sl){
+  function capWords(s){ return String(s||'').split(/[-\s]+/).map(w=>w? w[0].toUpperCase()+w.slice(1):'').join(' '); }
+  function toISOfromYYYYMMDD(s){ return s.slice(0,4)+'-'+s.slice(4,6)+'-'+s.slice(6,8); }
+  function addDaysISO(iso, n){ const d=new Date(iso); d.setDate(d.getDate()+n); return d.toISOString().slice(0,10); }
+  function isoToYYYYMMDD(iso){ return iso.replace(/-/g,''); }
+  function formatStatus(st){ const r=String(st||'').toUpperCase(); if(r.includes('STATUS_IN_PROGRESS')||r.includes('LIVE')) return 'Live'; if(r.includes('FINAL')) return 'Finished'; if(r.includes('SCHEDULED')||r.includes('STATUS_SCHEDULED')) return 'Scheduled'; return st||''; }
+
+  function renderServerButtons(slugStr){
     const bar = $('#serverBar');
-    const labels = ['Server 1','Server 2','Server 3','Server 4','Server 5'];
     const url = 'https://crutchanalyse.com/w2n5uxyv5?key=421e53b34da32e5044e25f26baddab45';
-    bar.innerHTML = labels.map(l => `<a class="sbtn" href="${url}" target="_blank" rel="noopener">${l}</a>`).join('');
+    const labels = ['Server 1','Server 2','Server 3','Server 4','Server 5'];
+    bar.innerHTML = labels.map(l=>`<a class="sbtn" href="${url}" target="_blank" rel="noopener">${l}</a>`).join('');
   }
 
-  // prefill
-  (function prime(){
+  // prefill from URL
+  (function(){
     const id = getMatchId();
-    if (id){
-      const base = id.includes('@') ? id.split('@')[0] : id;
-      const parts = base.split('-vs-');
-      if (parts.length === 2){
-        $('#homeName').textContent = capWords(parts[0]);
-        $('#awayName').textContent = capWords(parts[1]);
-      } else {
-        $('#homeName').textContent = capWords(base);
-      }
-      renderServerButtonsFromSlug(base);
+    if (!id) return;
+    const bare = id.includes('@') ? id.split('@')[0] : id;
+    const parts = bare.split('-vs-');
+    if (parts.length===2){
+      $('#homeName').textContent = capWords(parts[0]);
+      $('#awayName').textContent = capWords(parts[1]);
+    }else{
+      $('#homeName').textContent = capWords(bare);
     }
+    renderServerButtons(bare);
   })();
 
-  // fetch fixtures from fotbal.site with yyyymmdd
-  async function fixturesFor(isoDate){
-    // isoDate: 2025-11-09 -> need 20251109
-    const yyyymmdd = yyyymmddFromISO(isoDate);
+  async function fetchFixturesFor(isoDate){
+    const yyyymmdd = isoToYYYYMMDD(isoDate);
     const url = `https://fotbal.site/fixtures.php?date=${yyyymmdd}`;
-    try{
-      const r = await fetch(url, {cache:'no-store'});
-      if (!r.ok) return [];
-      const data = await r.json();
-      if (!Array.isArray(data)) return [];
-      // normalize
-      return data.map(x => {
-        const homeName = x.home_team || x.home_name || x.home || '';
-        const awayName = x.away_team || x.away_name || x.away || '';
-        const leagueName = x.league_name || x.league || x.competition || '';
-        const startUtc = x.kickoff || x.time || x.date || '';
-        const status = x.status || x.state || '';
-        const homeLogo = x.home_logo || x.home_badge || '';
-        const awayLogo = x.away_logo || x.away_badge || '';
-        return {
-          raw: x,
-          home: { name: homeName, logo: homeLogo },
-          away: { name: awayName, logo: awayLogo },
-          league: { name: leagueName },
-          start_utc: startUtc,
-          status: status
-        };
-      });
-    }catch(e){
-      return [];
-    }
+    const r = await fetch(url, {cache:'no-store'});
+    if (!r.ok) return [];
+    const data = await r.json();
+    // your PHP returns {ok:..., fixtures:[...]}
+    if (Array.isArray(data)) return data;
+    if (data && Array.isArray(data.fixtures)) return data.fixtures;
+    return [];
   }
 
-  function matchSlug(slugPart, fx){
-    const a = slug(fx.home?.name || '');
-    const b = slug(fx.away?.name || '');
-    const full1 = `${a}-vs-${b}`;
-    const full2 = `${b}-vs-${a}`;
-    return slugPart === full1 || slugPart === full2;
+  function matchBySlug(sl, fx){
+    const home = slug(fx.home?.name || '');
+    const away = slug(fx.away?.name || '');
+    return sl === `${home}-vs-${away}` || sl === `${away}-vs-${home}`;
   }
 
   function applyFixture(fx){
-    if (!fx){ hideLoading(); return; }
     $('#homeName').textContent = fx.home?.name || $('#homeName').textContent;
     $('#awayName').textContent = fx.away?.name || $('#awayName').textContent;
     if (fx.home?.logo) $('#homeLogo').src = fx.home.logo;
     if (fx.away?.logo) $('#awayLogo').src = fx.away.logo;
     $('#league').textContent = fx.league?.name || '-';
-    $('#leagueBadge').textContent = fx.league?.name || '';
-    const pretty = fx.start_utc ? fx.start_utc : '-';
-    $('#kickoff').textContent = pretty;
-    const friendly = formatStatus(fx.status);
-    $('#state').textContent = friendly || '-';
-    $('#statusLine').textContent = friendly || '';
+    $('#kickoff').textContent = fx.start_utc || '-';
+    const st = formatStatus(fx.status);
+    $('#state').textContent = st || '-';
+    $('#statusLine').textContent = st || '';
   }
 
   async function load(){
     const id = getMatchId();
-    if (!id){ $('#statusLine').textContent = 'Missing match id'; hideLoading(); return; }
+    if (!id){ $('#statusLine').textContent='Missing match id'; hideLoading(); return; }
 
     const hasAt = id.includes('@');
     const slugPart = slug(hasAt ? id.split('@')[0] : id);
-    const isoBase = hasAt
-      ? id.split('@')[1].replace(/(\d{4})(\d{2})(\d{2})/, '$1-$2-$3')
+    const baseISO = hasAt
+      ? toISOfromYYYYMMDD(id.split('@')[1])
       : new Date().toISOString().slice(0,10);
 
-    // try date -2 to +2
     const offsets = [-2,-1,0,1,2];
     let found = null;
     for (const off of offsets){
-      const d = addDaysISO(isoBase, off);
-      const list = await fixturesFor(d);
-      const hit = list.find(fx => matchSlug(slugPart, fx));
-      if (hit){ found = hit; break; }
+      const dISO = addDaysISO(baseISO, off);
+      try{
+        const list = await fetchFixturesFor(dISO);
+        const hit = list.find(fx => matchBySlug(slugPart, fx));
+        if (hit){ found = hit; break; }
+      }catch(e){}
     }
+
     if (found){
       applyFixture(found);
+    }else{
+      $('#statusLine').textContent = '';
     }
     hideLoading();
   }
+
   load();
 </script>
 </body>
